--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         </div>
       </div>
     </div>
+    <span><a href="https://github.com/AnastasiaBokinsky/MyWeatherProject">Open source code</a>by Anastasiia Boiko</span>
    <script src="src/index.js"></script>
   </body>
 </html>
