geolocation button added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1 id="city"></h1>
             <ul>
               <li>Last updated at: <span id="date"></span></li>
-              <li id="description">Partly cloudy</li>
+              <li id="description"></li>
             </ul>
             <div class="d-flex weather-temperature">
               <img src="" alt="Partly cloudy" id="icon"/>
@@ -75,6 +75,7 @@
               value="Search"
               class="btn btn-primary w-100"
             />
+            <button type="button" class="btn btn-primary" id="my-position" >My location</button>
         </div>
       </form> 
       </div>
